overflow bug

--- a/src/assets/style/base.scss
+++ b/src/assets/style/base.scss
@@ -1,7 +1,6 @@
 html, body {
   background-color: #fff;
   touch-action: manipulation;
-  overflow-x: hidden;
   width: 100%;
 }
 
